feature: Added query-builder-collection.ts fix: Removed Articles, Added Book instead fix: Update function in controllers did not reflect boolean updates chore: updated swagger.yaml chore: updated package.json dependencies
